test/error/syn/functionParentheses.tig
let
    function fun a,b,c) := 
    (
    )
in
end
